Fix overlapping figures

--- a/src/pages/Home/components/Middle/middle.module.css
+++ b/src/pages/Home/components/Middle/middle.module.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 150px;
-  height: calc(260px * 3);
+  height: calc(260px * 3 + 300px);
   animation: scroll-vertical 15s linear infinite;
 }
 
@@ -45,7 +45,7 @@
     transform: translateY(0);
   }
   100% {
-    transform: translateY(calc(-260px * 3 - 120px));
+    transform: translateY(calc(-260px * 3 - 180px));
   }
 }
 
